# SwitchHub

./: app.py  doc.markdown
factory-reset/: catalyst2960x.py  general-fr.py  main copy.py  main.py
v2cpp/: CMakeLists.txt
v2cpp/src/: Main.cpp  SerialEngine.hpp  Utils.hpp  Workflow.hpp
v2cpp/src/workflows/: aruba_ap535.json  cisco_2960-CX.json  cisco_ME3400.json  cisco_nexus_nx-os.json
workflow/: cisco_catalyst2960x.py  workflow_runner.py
workflow/templates/: cisco_2960x.json  cisco_ME3400.json  cisco_catalyst_3850.json
